# deej-ai.cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: DeejAISources.cmake  DynamicBuild.cmake  FetchEigen.cmake  FetchONNX.cmake  Package.cmake  StaticBuild.cmake
src/: main.cpp
src/cxxopts/: cxxopts.hpp
src/deejai/: common.hpp  generator.cpp  generator.hpp  scanner.cpp  scanner.hpp  utils.cpp  utils.hpp
src/librosa/: librosa.h
